--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "symfony/framework-bundle": "5.4.*",
         "symfony/monolog-bundle": "^3.7",
         "symfony/runtime": "5.4.*",
-        "symfony/yaml": "5.4.*"
+        "symfony/yaml": "5.4.*",
+      "ext-json": "*"
     },
     "config": {
         "allow-plugins": {
